tests/paczka1/fuzzy1/50559684.err
Error in line 4: HlFgWJ8Y S627 71,3
Error in line 17: mX5pUwWa A712 -1,9
Error in line 23: mX5pUwWa A215 65,H
Error in line 21: cZzlyTVfU S733 34,2
Error in line 15: 3rgXci S733 87,7
Error in line 27: HlFgWJ8Y S733 8,7
